--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -13,32 +12,34 @@
     <header id="header">
         <h2>Weather Dashboard</h2>
     </header>
-    <div class="container row custom-container">
+    <div id="searchArea" class="">
     <h2>Search for a City:</h2>
-    <div id="searchArea" class="h100 col-3 g-3 align-items-center">
-        <div class="col-auto">
-            <input type="text" id="cityInput" class="form-control" >
+    <div id="searchArea" class="">
+        <div class="">
+            <input type="text" id="cityInput" placeholder="Corona">
         </div>
         <button id="searchBtn">Search</button>
         <ul id="pastSearches">
         </ul>
     </div>
-    <div class="row">
-        <section id="currentWeather" class="col-9">
+    </div>
+    <div id="weatherArea" class="">
+        <section id="currentWeather" class="">
             <h2 id="cityNameDate"></h2>
             <p id="temp"></p>
             <p id="wind"></p>
             <p id="humidity"></p>
             <p id="uv"></p>
         </section>
-        <section class="col-9">
-
+        <section class="fiveDay" class="">
+            <h2>5-Day Forecast:</h2>
+            <div id="fiveDay">
+            </div>
         </section>
     </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
