further work on the entire project, including rebuilding how the five day forecast is made and presented

--- a/index.html
+++ b/index.html
@@ -33,6 +33,46 @@
                     </div>
                     <div id="fiveDay" class="row">
                         <h2>5-Day Forecast:</h2>
+                        <div class="card" style="width: 200px; margin-left: 10px;">
+                            <div class="card-body">
+                                <h5 id="oneDayDate" class="card-title"></h5>
+                                <p id="oneDayTemp" class="card-text"></p>
+                                <p id="oneDayWind" class="card-text"></p>
+                                <p id="oneDayHumid" class="card-text"></p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 200px; margin-left: 10px;">
+                            <div class="card-body">
+                                <h5 id="twoDayDate" class="card-title"></h5>
+                                <p id="twoDayTemp" class="card-text"></p>
+                                <p id="twoDayWind" class="card-text"></p>
+                                <p id="twoDayHumid" class="card-text"></p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 200px; margin-left: 10px;">
+                            <div class="card-body">
+                                <h5 id="threeDayDate" class="card-title"></h5>
+                                <p id="threeDayTemp" class="card-text"></p>
+                                <p id="threeDayWind" class="card-text"></p>
+                                <p id="threeDayHumid" class="card-text"></p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 200px; margin-left: 10px;">
+                            <div class="card-body">
+                                <h5 id="fourthDayDate" class="card-title"></h5>
+                                <p id="fourthDayTemp" class="card-text"></p>
+                                <p id="fourthDayWind" class="card-text"></p>
+                                <p id="fourthDayHumid" class="card-text"></p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 200px; margin-left: 10px;">
+                            <div class="card-body">
+                                <h5 id="fiveDayDate" class="card-title"></h5>
+                                <p id="fiveDayTemp" class="card-text"></p>
+                                <p id="fiveDayWind" class="card-text"></p>
+                                <p id="fiveDayHumid" class="card-text"></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
