made all the icons work

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <div class="card" style="width: 200px; margin-left: 10px;">
                             <div class="card-body">
                                 <h5 id="oneDayDate" class="card-title"></h5>
+                                <img id="wicon1" src="" alt="Weather icon">
                                 <p id="oneDayTemp" class="card-text"></p>
                                 <p id="oneDayWind" class="card-text"></p>
                                 <p id="oneDayHumid" class="card-text"></p>
@@ -44,6 +45,7 @@
                         <div class="card" style="width: 200px; margin-left: 10px;">
                             <div class="card-body">
                                 <h5 id="twoDayDate" class="card-title"></h5>
+                                <img id="wicon2" src="" alt="Weather icon">
                                 <p id="twoDayTemp" class="card-text"></p>
                                 <p id="twoDayWind" class="card-text"></p>
                                 <p id="twoDayHumid" class="card-text"></p>
@@ -52,6 +54,7 @@
                         <div class="card" style="width: 200px; margin-left: 10px;">
                             <div class="card-body">
                                 <h5 id="threeDayDate" class="card-title"></h5>
+                                <img id="wicon3" src="" alt="Weather icon">
                                 <p id="threeDayTemp" class="card-text"></p>
                                 <p id="threeDayWind" class="card-text"></p>
                                 <p id="threeDayHumid" class="card-text"></p>
@@ -60,6 +63,7 @@
                         <div class="card" style="width: 200px; margin-left: 10px;">
                             <div class="card-body">
                                 <h5 id="fourthDayDate" class="card-title"></h5>
+                                <img id="wicon4" src="" alt="Weather icon">
                                 <p id="fourthDayTemp" class="card-text"></p>
                                 <p id="fourthDayWind" class="card-text"></p>
                                 <p id="fourthDayHumid" class="card-text"></p>
@@ -68,6 +72,7 @@
                         <div class="card" style="width: 200px; margin-left: 10px;">
                             <div class="card-body">
                                 <h5 id="fiveDayDate" class="card-title"></h5>
+                                <img id="wicon5" src="" alt="Weather icon">
                                 <p id="fiveDayTemp" class="card-text"></p>
                                 <p id="fiveDayWind" class="card-text"></p>
                                 <p id="fiveDayHumid" class="card-text"></p>
