final fixes on the coloring and formatting

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div id="fiveDay" class="row">
                         <h2>5-Day Forecast:</h2>
-                        <div class="card" style="width: 200px; margin-left: 10px;">
+                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
                             <div class="card-body">
                                 <h5 id="oneDayDate" class="card-title"></h5>
                                 <img id="wicon1" src="" alt="Weather icon">
@@ -42,7 +42,7 @@
                                 <p id="oneDayHumid" class="card-text"></p>
                             </div>
                         </div>
-                        <div class="card" style="width: 200px; margin-left: 10px;">
+                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
                             <div class="card-body">
                                 <h5 id="twoDayDate" class="card-title"></h5>
                                 <img id="wicon2" src="" alt="Weather icon">
@@ -51,7 +51,7 @@
                                 <p id="twoDayHumid" class="card-text"></p>
                             </div>
                         </div>
-                        <div class="card" style="width: 200px; margin-left: 10px;">
+                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
                             <div class="card-body">
                                 <h5 id="threeDayDate" class="card-title"></h5>
                                 <img id="wicon3" src="" alt="Weather icon">
@@ -60,7 +60,7 @@
                                 <p id="threeDayHumid" class="card-text"></p>
                             </div>
                         </div>
-                        <div class="card" style="width: 200px; margin-left: 10px;">
+                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
                             <div class="card-body">
                                 <h5 id="fourthDayDate" class="card-title"></h5>
                                 <img id="wicon4" src="" alt="Weather icon">
@@ -69,7 +69,7 @@
                                 <p id="fourthDayHumid" class="card-text"></p>
                             </div>
                         </div>
-                        <div class="card" style="width: 200px; margin-left: 10px;">
+                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
                             <div class="card-body">
                                 <h5 id="fiveDayDate" class="card-title"></h5>
                                 <img id="wicon5" src="" alt="Weather icon">
