final fixes to the entire page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <div class="container-fluid">
                     <div  id="currentWeather" class="row">
                         <h2 id="cityNameDate"></h2>
-                        <p id="temp"></p>
-                        <p id="wind"></p>
-                        <p id="humidity"></p>
-                        <p id="uv"></p>
+                        <p>Temp: <span id="temp"></span></p>
+                        <p>Wind: <span id="wind"></span></p>
+                        <p>Humidity: <span id="humidity"></span></p>
+                        <p>UV Index: <span id="uv"></span></p>
                     </div>
                     <div id="fiveDay" class="row">
                         <h2>5-Day Forecast:</h2>
