--- a/index.html
+++ b/index.html
@@ -1,91 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
-</head>
-<body>
+  </head>
+  <body id="body">
     <header id="header">
-        <h2>Weather Dashboard</h2>
+      <h2>Weather Dashboard</h2>
     </header>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-3">
-                <h2 class="">Search for a City:</h2>
-                <input type="text" id="cityInput" placeholder="Corona">
-                <button id="searchBtn" class= "">Search</button>
-                <ul id="pastSearches">
-                </ul>
-            </div>
-            <div class="col-9">
-                <div class="container-fluid">
-                    <div  id="currentWeather" class="row">
-                        <h2 id="cityNameDate"></h2>
-                        <p>Temp: <span id="temp"></span></p>
-                        <p>Wind: <span id="wind"></span></p>
-                        <p>Humidity: <span id="humidity"></span></p>
-                        <p>UV Index: <span id="uv"></span></p>
-                    </div>
-                    <div id="fiveDay" class="row">
-                        <h2>5-Day Forecast:</h2>
-                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
-                            <div class="card-body">
-                                <h5 id="oneDayDate" class="card-title"></h5>
-                                <img id="wicon1" src="" alt="Weather icon">
-                                <p id="oneDayTemp" class="card-text"></p>
-                                <p id="oneDayWind" class="card-text"></p>
-                                <p id="oneDayHumid" class="card-text"></p>
-                            </div>
-                        </div>
-                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
-                            <div class="card-body">
-                                <h5 id="twoDayDate" class="card-title"></h5>
-                                <img id="wicon2" src="" alt="Weather icon">
-                                <p id="twoDayTemp" class="card-text"></p>
-                                <p id="twoDayWind" class="card-text"></p>
-                                <p id="twoDayHumid" class="card-text"></p>
-                            </div>
-                        </div>
-                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
-                            <div class="card-body">
-                                <h5 id="threeDayDate" class="card-title"></h5>
-                                <img id="wicon3" src="" alt="Weather icon">
-                                <p id="threeDayTemp" class="card-text"></p>
-                                <p id="threeDayWind" class="card-text"></p>
-                                <p id="threeDayHumid" class="card-text"></p>
-                            </div>
-                        </div>
-                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
-                            <div class="card-body">
-                                <h5 id="fourthDayDate" class="card-title"></h5>
-                                <img id="wicon4" src="" alt="Weather icon">
-                                <p id="fourthDayTemp" class="card-text"></p>
-                                <p id="fourthDayWind" class="card-text"></p>
-                                <p id="fourthDayHumid" class="card-text"></p>
-                            </div>
-                        </div>
-                        <div class="card custom-card" style="width: 250px; margin-left: 20px; height: 300px;">
-                            <div class="card-body">
-                                <h5 id="fiveDayDate" class="card-title"></h5>
-                                <img id="wicon5" src="" alt="Weather icon">
-                                <p id="fiveDayTemp" class="card-text"></p>
-                                <p id="fiveDayWind" class="card-text"></p>
-                                <p id="fiveDayHumid" class="card-text"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-3">
+          <h2 class="">Search for a City:</h2>
+          <input type="text" id="cityInput" placeholder="Corona" />
+          <button id="searchBtn" class="">Search</button>
+          <ul id="pastSearches"></ul>
         </div>
+        <div class="col-9">
+          <div id="weather" class="container-fluid">
+            <div id="currentWeather" class="row">
+              <h2 id="cityNameDate"></h2>
+              <p>Temp: <span id="temp"></span></p>
+              <p>Wind: <span id="wind"></span></p>
+              <p>Humidity: <span id="humidity"></span></p>
+              <p>UV Index: <span id="uv"></span></p>
+            </div>
+            <h2>5-Day Forecast:</h2>
+            <div id="fiveDay" class="row"></div>
+          </div>
+        </div>
+      </div>
     </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="./assets/js/script.js"></script>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+      integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
